# AI-RecommendeAPI

./: README.md  pyproject.toml
app/: main.py
app/api/vi/routers/: recommend.py
app/api/vi/schemas/: recommendation.py
app/core/: config.py
app/langchain_tools/: search_web.py
app/services/: recommendation_service.py
