[tool.poetry]
name = "recommend-api-server"
version = "0.1.0"
description = ""
package-mode = false
authors = ["JunghyunMoon <foqlzm12345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
langgraph = "0.2.34"
langchain-openai = "^0.3.2"
langchain-community = "0.3.1"
langchain-chroma = "0.1.4"
python-dotenv = "1.0.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.1"
langchain-deepseek-official = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
